--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,6 +11,39 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #3 - Use the same list display from search.html -->
+    <div th:if="${items}">
+
+        <h3 th:text="${items.size()} + ' Result(s)'">Results</h3>
+
+        <div>
+
+            <table th:each="item, idx : ${items}" class="job-listing">
+                <tr>
+                    <td>Position Type</td>
+                    <td th:text="${item.get('position type')}"></td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td th:text="${item.get('name')}"></td>
+                </tr>
+                <tr>
+                    <td>Employer</td>
+                    <td th:text="${item.get('employer')}"></td>
+                </tr>
+                <tr>
+                    <td>Location</td>
+                    <td th:text="${item.get('location')}"></td>
+                </tr>
+                <tr>
+                    <td>Core Competency</td>
+                    <td th:text="${item.get('core competency')}"></td>
+                </tr>
+            </table>
+
+
+        </div>
+
+    </div>
 
 </div>
 
